--- a/css/style.css
+++ b/css/style.css
@@ -90,10 +90,10 @@ html{
     display: none;
 }
 .header .mobile span{
-    font-size: 2.6rem;
-    color: var(--black);
-    margin: 0 .8rem;
-    border: 2px solid var(--black);
+    font-size: 2.3rem;
+    color: rgb(99, 95, 95);
+    margin: 0 .5rem;
+    border: 2px solid rgb(99, 95, 95);
     padding: .7rem 1rem;
     border-radius: .5rem;
 }
