Added background color on hover box

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ html{
 /* End general attribute  */
 
 .header{
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: space-between;
