Added background color on hover box

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ html{
 /* End general attribute  */
 
 .header{
-    position: fixed;
+    background: #fff;
     display: flex;
     align-items: center;
     justify-content: space-between;
