--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ html{
 .support-container .box{
     flex: 1 1 20rem;
     text-align: center;
-    /* box-shadow: var(--box-shadow); */
+    box-shadow: var(--box-shadow);
     padding: 2rem;
     border-radius: 2rem;
 }
