--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ html{
     display: none;
 }
 .header .mobile span{
-    font-size: 2.3rem;
+    font-size: 1.8rem;
     color: rgb(77, 74, 74);
     margin: 0 .5rem;
     border: 2px solid rgb(77, 74, 74);
@@ -165,24 +165,27 @@ html{
 .support-container .box{
     flex: 1 1 20rem;
     text-align: center;
-    box-shadow: var(--box-shadow);
+    /* box-shadow: var(--box-shadow); */
     padding: 2rem;
     border-radius: 2rem;
 }
-
+.support-container .box h2{
+    font-size: 1.5rem;
+    margin: 1rem 0;
+}
 .support-container .box p{
     font-size: 1.3rem;
     margin-top:1.3rem;
-    line-height: 2rem;
+    line-height: 2.2rem;
 }
 /* .support-container .box.active{
     background: var(--default-color);
     color: #fff;
 } */
-.support-container .box:hover{
+/* .support-container .box:hover{
     background: #6c86bc;
     color: #fff;
-}
+} */
 
 
 .enterprise{
@@ -195,9 +198,9 @@ html{
     }
 }
 @media (max-width:1100px){
-    html{
-        font-size: 50%;
-    }
+    /* html{
+        font-size: 56%;
+    } */
     .header{
         padding: 3rem 4%;
     }
