--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,17 @@ html{
 .img img{
     width: 100%;
 }
+.section-header{
+    text-align: center;
+}
 .section-header h1{
     text-align: center;
-    font-size: 1.8rem;
+    font-size: 2rem;
+}
+.section-header p{
+    font-size: 1.4rem;
+    margin-top: 1rem;
+    font-weight: 500;
 }
 .seperator{
     height: 10rem;
@@ -155,7 +163,7 @@ html{
 }
 
 .support-container{
-    margin-top: 3rem;
+    margin-top: 5rem;
     display: flex;
     justify-content: center;
     flex-wrap:wrap ;
