--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,19 @@ html{
 .col-2 .box{
     flex: 1 1 35rem;
 }
+.box-inner{
+    background:#fff;
+    margin-bottom: 1rem;
+    padding: 2rem;
+    border-radius: 3rem;
+}
+.box-inner h3{
+    font-size: 1.5rem;
+    padding: 1rem 0;
+}
+.box-inner p{
+    font-size: 1.3rem;
+}
 
 .text h1{
     font-size: 3.5rem;
@@ -186,6 +199,21 @@ html{
     font-size: 1.3rem;
     margin-top:1.3rem;
     line-height: 2.2rem;
+}
+.enterprise .ent{
+    text-align: center;
+    padding: 3rem 0;
+}
+.enterprise .ent h3{
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--black);
+}
+.enterprise .ent p{
+    padding: .5rem 0;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2.1rem;
 }
 
 
