--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     --default-color: #6581b9;
     --black: #0b0e17;
     --box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-}
+} 
 *{
     font-family: 'Montserrat', sans-serif;
     padding: 0; margin: 0;
@@ -216,11 +216,69 @@ html{
     line-height: 2.1rem;
 }
 
-
 .enterprise{
     background: #d2e2ee;
 }
 
+.footer-container{
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap:wrap ;
+    gap: 1rem;
+
+}
+.footer-container .box{
+    flex: 1 1 20rem;
+    padding: 2rem;
+    border-radius: 2rem;
+}
+.footer-container .box .logo{
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--black);
+}
+.footer-container .logo img{
+    width: 45px;
+}
+/* .footer-container .box .footer-navbar a{
+    display: flex;
+    font-size: 1.5rem;
+    margin: 2rem 0;
+    color: var(--black);
+    font-weight: 500;
+}
+.footer-container .box .footer-navbar a img{
+    width: 20px;
+} */
+.footer-container .box h2{
+    font-size: 1.5rem;
+    margin: 1rem 0;
+}
+.ecc p{
+    font-size: 1.3rem;
+    margin-top:1.3rem;
+    line-height: 2.2rem;
+}
+.quick-links{
+    margin: 2rem 0;
+    text-align: center;
+}
+.quick-links a{
+    font-size: 1.3rem;
+    margin: 0 1rem;
+    font-weight: 500;
+    color: var(--default-color);
+    padding: .5rem 0;
+    display: inline-block;
+
+}
+.copywright{
+    text-align: center; margin-top: 4rem;border-top: 1px solid rgb(228, 237, 240) ;padding: 2rem 0;
+}
 @media (max-width:1225px){
     html{
         font-size: 58%;
