--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,109 @@ html{
     gap: 1rem;
 
 }
+
+.login-header{
+    position: fixed;
+    left: 0; right: 0; top: 0;
+    background: #bed5e8;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 3rem 4%;
+}
+.login-header .logo a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--black);
+}
+.login-header .logo img{
+    width: 45px;
+}
+.login-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem; 
+    height: 100vh;
+}
+.login-container .box{
+    margin-top: 10rem;
+    flex: 1 1 40rem;
+}
+.login-container .box img{
+    width: 100%;
+}
+.login-container .box h1{
+    font-size: 3rem;
+}
+.login-container .box p{
+    font-size: 1.4rem;
+    margin: 1.5rem 0;
+}
+.login-container .bullet .bullet-box{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.login-container .bullet .bullet-box img{
+    max-width: 30px;
+    max-height: 30px;
+}
+.background{
+    background: url("../images/loginBG.png") no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-clip: border-box;
+    position: relative;
+    
+}
+.login-container .box form{
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    background: #fff;
+    width: 70%;
+    height: 50rem;
+    transform: translate(-50%, -50%);
+    border-radius: 2.5rem;
+    padding: 4rem 3rem;
+}
+.login-container .box form h1{
+    font-size: 2.5rem;
+    font-weight: 500;
+    color: rgb(65, 60, 60);
+}
+.login-container .box form .fields{
+    margin-top: 2rem;
+}
+.login-container .box form .fields h2{
+    font-weight: 500;
+    color: #3b3d44;
+    font-size: 1.3rem;
+}
+.login-container .box form .fields input{
+    margin-top: 1rem;
+    width: 100%;
+    height: 48px;
+    line-height: 48px;
+    border-radius: 8px;
+    padding: 0 18px;
+    border: 1px solid #ebedf3;    
+}
+.login-container .box form .fields .btn-log{
+    padding: 12px 30px;    
+    font-size: 14px;
+    line-height: 1.4;
+    color: #fff;
+    background-color: var(--default-color);
+    border-radius: 6px;
+    width: 100%;   
+}
+
+
+
 .footer-container .box{
     flex: 1 1 20rem;
     padding: 2rem;
@@ -321,4 +424,14 @@ html{
     .support-container .box p{
         font-size: 1.5rem;
     }
+    .login-container{
+        gap: 20rem; 
+    }
+    .login-container .box{
+        margin-top: 7rem;
+    }
+    .login-container .box form{  
+        width: 100%;
+    }
+
 }
