--- a/css/style.css
+++ b/css/style.css
@@ -230,8 +230,6 @@ html{
 }
 
 .login-header{
-    position: fixed;
-    left: 0; right: 0; top: 0;
     background: #bed5e8;
     display: flex;
     align-items: center;
@@ -253,11 +251,11 @@ html{
     display: flex;
     flex-wrap: wrap;
     gap: 2rem; 
-    height: 100vh;
+    min-height: 100vh;
 }
 .login-container .box{
     position: relative;
-    margin-top: 10rem;
+    margin-top: 3rem;
     flex: 1 1 40rem;
 }
 .login-container .box img{
@@ -290,15 +288,19 @@ html{
 .login-container .box form{
     position: absolute;
     left: 50%;
-    /* top: 50%; */
-    top: 24rem;
     background: #fff;
     width: 70%;
     min-height: 50rem auto;
     transform: translate(-50%, -50%);
-    border-radius: 2.5rem;
+    border-radius: 1rem;
     padding: 4rem 3rem;
 }
+.login-container .box form.login{
+        top: 20rem;
+}
+.login-container .box form.signUp{
+    top: 25rem;
+} 
 .login-container .box form h1{
     font-size: 2.5rem;
     font-weight: 500;
@@ -341,7 +343,6 @@ html{
 .footer-container .box .logo{
     display: flex;
     align-items: center;
-    /* justify-content: center; */
     font-size: 2rem;
     font-weight: 600;
     color: var(--black);
@@ -426,14 +427,17 @@ html{
     .support-container .box p{
         font-size: 1.5rem;
     }
-    /* .login-container .signup-pad{
-        gap: 25rem; 
-    } */
     .login-container .box{
-        margin-top: 7rem;
+        margin-top: 0rem;
     }
     .login-container .box form{  
         width: 100%;
     }
+    .login-container .box form.login{
+        top: 17rem;
+    }
+    .login-container .box form.signUp{
+        top: 31rem;
+    } 
 
 }
